# vscode_cpp_conf

./: .gitignore  C++17_feature.md  CMake.md  LICENSE  README.md
cmake_proj/cmake_01/: CMakeLists.txt  README.md
cmake_proj/cmake_01/inc/: a.h  b.h
cmake_proj/cmake_01/src/: bubble_sort.cpp  calllib.cpp  main.cpp
cmake_proj/cmake_02/: CMakeLists.txt
cmake_proj/cmake_02/inc/: CTest.h  Cplusfeature17.h  MyLibrary.h
cmake_proj/cmake_02/src/: CTest.cpp  Cplusfeature17.cpp  MyLibrary.cpp  main.cpp
cmake_proj/cpp_conf_01/: CMakeLists.txt
cmake_proj/cpp_conf_01/inc/: b.h
cmake_proj/cpp_conf_02/: CMakeLists.txt
cmake_proj/cpp_conf_02/inc/: Utils.h
cmake_proj/cpp_conf_02/lib/: CMakeLists.txt
cmake_proj/cpp_conf_02/src/: Utils.cpp  main.cpp
cmake_proj/cpp_conf_03/: CMakeLists.txt
cmake_proj/cpp_conf_03/inc/: Utils.h
cmake_proj/cpp_conf_03/lib/: testlib.h
cmake_proj/cpp_conf_03/src/: Utils.cpp  main.cpp
cmake_proj/cpp_conf_04/: CMakeLists.txt
cmake_proj/cpp_conf_04/src/: Test.cpp
cmake_proj/cpp_conf_lib/module/src/: makelib.cpp
cmake_proj/tutorial_01/: CMakeLists.txt
cmake_proj/tutorial_01/inc/: header.h
cmake_proj/tutorial_01/src/: main.cpp
cmake_proj/vscode_cpp_conf_01/src/: b.cpp
cmake_proj/vscode_cpp_conf_02/inc/: Utils.h
cmake_proj/vscode_cpp_conf_02/src/: main.cpp
cmake_proj/vscode_cpp_conf_03/src/: main.cpp
cpp_conf_lib/: CMakeLists.txt
cpp_conf_lib/module/inc/: makelib.h
cpp_conf_lib/src/: main.cpp
gplusplus/cplus/: main.cpp
gplusplus/test01/: CMakeLists.txt
gplusplus/test01/src/: main.cpp
npp_plugin/: BetterMultiSelection-master[zip].src  NppPluginTemplate.dll.pro  TranslateSelection.dll.pro
npp_plugin/TranslateSelection/: NppPlugin.def  PluginDefinition.cpp  PluginDefinition.h  main.cpp  menuCmdID.h
npp_plugin/plugintemplate-master/src/: Logger.cpp  Logger.h  NppPluginDemo.cpp  NppPluginDemo.rc  PhoneticFeature.cpp  PhoneticFeature.h  PluginDefinition.cpp  PluginDefinition.h  TranslateSelection_last_response.txt  Utility.cpp  Utility.h  menuCmdID.h  resource.h
npp_plugin/plugintemplate-master/src/DockingFeature/: DockingDlgInterface.h  SettingsDlg.cpp  SettingsDlg.h  goLine.rc  resource.h
npp_plugin/plugintemplate-master/vs.proj/: NppPluginTemplate.7z  TranslateSelection.vcxproj  TranslateSelection.vcxproj.filters
vscode_cpp_conf_01/: CMakeLists.txt
vscode_cpp_conf_01/inc/: a.h
vscode_cpp_conf_01/src/: main.cpp
vscode_cpp_conf_02/: CMakeLists.txt
vscode_cpp_conf_02/src/: Utils.cpp
vscode_cpp_conf_04/inc/: Test.h
vscode_cpp_conf_04/src/: main.cpp
